--- a/client/SplitExpenses.html
+++ b/client/SplitExpenses.html
@@ -7,7 +7,7 @@
 	<title>Split Expenses</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
+	<link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/app.css">
 </head>
 
@@ -41,18 +41,20 @@
 
 	<footer></footer>
 
-	<script src="bower_components/angular/angular.js"></script>
-	<script src="bower_components/angular-route/angular-route.js"></script>
-	<script src="bower_components/jquery/dist/jquery.min.js"></script>
-	<script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-
-	<script src="dummy.js"></script>
+	<script src="../bower_components/angular/angular.js"></script>
+	<script src="../bower_components/angular-route/angular-route.js"></script>
+	<script src="../bower_components/jquery/dist/jquery.min.js"></script>
+	<script src="../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 
 	<script src="app.js"></script>
-	<script src="controller/user.js"></script>
-	<script src="controller/expense.js"></script>
-	<script src="controller/payment.js"></script>
-	<script src="controller/group.js"></script>
+	<script src="services/users.js"></script>
+	<script src="services/expenses.js"></script>
+	<script src="services/payments.js"></script>
+	<script src="services/groups.js"></script>
+	<script src="controllers/users.js"></script>
+	<script src="controllers/expenses.js"></script>
+	<script src="controllers/payments.js"></script>
+	<script src="controllers/groups.js"></script>
 </body>
 
 </html>
