--- a/client/SplitExpenses.html
+++ b/client/SplitExpenses.html
@@ -47,6 +47,7 @@
 	<script src="../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 
 	<script src="app.js"></script>
+	<script src="services/server.js"></script>
 	<script src="services/users.js"></script>
 	<script src="services/expenses.js"></script>
 	<script src="services/payments.js"></script>
