client create, page layout, index.html

--- a/client/index.html
+++ b/client/index.html
@@ -24,19 +24,23 @@
 				</button>
 				<a class="navbar-brand" href="#">SplitExpenses</a>
 			</div>
-            <div class="collapse navbar-collapse">
-                <ul class="nav navbar-nav">
-                    <li><a href="#/users">Users</a></li>
-                    <li><a href="#/expenses">Expenses</a></li>
-                    <li><a href="#/payments">Payments</a></li>
-                    <li><a href="#/groups">Groups</a></li>
-                </ul>
-            </div>
+			<div class="collapse navbar-collapse">
+				<ul class="nav navbar-nav">
+					<li><a href="#/users">Users</a></li>
+					<li><a href="#/expenses">Expenses</a></li>
+					<li><a href="#/payments">Payments</a></li>
+					<li><a href="#/groups">Groups</a></li>
+				</ul>
+			</div>
 		</div>
 	</nav>
 
 	<div class="container">
-		<div ng-view></div>
+		<div class="col-lg-2"></div>
+		<div class="col-lg-8">
+			<div ng-view></div>
+		</div>
+		<div class="col-lg-2"></div>
 	</div>
 
 	<footer></footer>
