--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,7 @@
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="components/bootstrap/dist/css/bootstrap.min.css">
+	<link rel="stylesheet" href="components/alertifyjs/build/css/alertify.min.css">
 	<link rel="stylesheet" href="css/app.css">
 </head>
 
@@ -45,10 +46,11 @@
 
 	<footer></footer>
 
-	<script src="components/angular/angular.js"></script>
-	<script src="components/angular-route/angular-route.js"></script>
+	<script src="components/angular/angular.min.js"></script>
+	<script src="components/angular-route/angular-route.min.js"></script>
 	<script src="components/jquery/dist/jquery.min.js"></script>
 	<script src="components/bootstrap/dist/js/bootstrap.min.js"></script>
+	<script src="components/alertifyjs/build/alertify.min.js"></script>
 
 	<script src="app.js"></script>
 	<script src="services/server.js"></script>
