ng-href, delete user form, delete user button

--- a/client/index.html
+++ b/client/index.html
@@ -23,14 +23,14 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="#">SplitExpenses</a>
+				<a class="navbar-brand" ng-href="#">SplitExpenses</a>
 			</div>
 			<div class="collapse navbar-collapse">
 				<ul class="nav navbar-nav">
-					<li><a href="#/users">Users</a></li>
-					<li><a href="#/expenses">Expenses</a></li>
-					<li><a href="#/payments">Payments</a></li>
-					<li><a href="#/groups">Groups</a></li>
+					<li><a ng-href="#/users">Users</a></li>
+					<li><a ng-href="#/expenses">Expenses</a></li>
+					<li><a ng-href="#/payments">Payments</a></li>
+					<li><a ng-href="#/groups">Groups</a></li>
 				</ul>
 			</div>
 		</div>
