include font-awesome

--- a/client/index.html
+++ b/client/index.html
@@ -9,6 +9,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="components/bootstrap/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" href="components/alertifyjs/build/css/alertify.min.css">
+	<link rel="stylesheet" href="components/font-awesome/css/font-awesome.min.css">
 	<link rel="stylesheet" href="css/app.css">
 </head>
 
